fix user-image on ie8

--- a/drupal/sites/all/themes/ehl/css/style.css
+++ b/drupal/sites/all/themes/ehl/css/style.css
@@ -5500,6 +5500,7 @@ hr.soften {
   border: 6px solid #ffffff;
   overflow: hidden;
   display: inline-block;
+  width: 120px;
 }
 .user-picture img {
   width: 120px;
@@ -6268,6 +6269,7 @@ article.node-project .sidebar table {
   -o-border-radius: 40px;
   border-radius: 40px;
   border-width: 4px;
+  width: 60px;
 }
 .comment .user-picture img {
   width: 60px;
