--- a/drupal/sites/all/themes/ehl/less/snippet/general.less
+++ b/drupal/sites/all/themes/ehl/less/snippet/general.less
@@ -25,6 +25,7 @@ hr.soften {
   border:6px solid @white;
   overflow: hidden;
   display: inline-block;
+  width: 120px;
   img{
     width: 120px;
     height: 120px;
